fixed problem with app overflow porpert

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .bg-logo {
